--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -10,7 +10,7 @@
     </form>
 </div>
 
-<div><a href="#/new_user">Add user</a></div>
+<div><a href="/new_user">Add user</a></div>
 
 <div>
     <p>Users:</p>
