--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -3,14 +3,15 @@
 {% block script %}
 <script type="text/javascript">
         $(document).ready(function(){
-        $('.date').datepicker({ dateFormat: 'yy-mm-dd' });})
+         $('.date').datepicker({ dateFormat: 'yy-mm-dd' });
+        });
+
 </script>
 {% endblock %}
 
 {% block content %}
-
         <div id="events">
-        <a href="#" onclick="display(this)">Automatic creation PR events:</a>
+        <a href="#" onclick="display(this); return false">Automatic creation PR events:</a>
         <div class='hidden'>
         {% for event in events %}
         <div id="{{event.type}}">
@@ -21,6 +22,9 @@
 
         finish date:
         <input type="text" name="finish" value="{{event.finish_date}}" class="date"><br>
+
+        first effective date:
+        <input type="text" name="first_date" value="{{event.first_effective_date}}" class="date"><br>
             <input type='button' onclick="update_event(this)" value="change">
         </div>
         {% endfor %}
@@ -30,6 +34,7 @@
         <tr><td>type:</td><td><input type="text" name="type" ></td></tr>
         <tr><td>start date:</td><td><input type="text" name="start" class="date" ></td></tr>
         <tr><td>finish date:</td><td><input type="text" name="finish" class="date"></td></tr>
+        <tr><td>first effective date:</td><td><input type="text" name="first_date" class="date"></td></tr>
         </table>
         <input type='button' onclick="create_event(this)" value="create">
         </div>
