--- a/application/templates/users.html
+++ b/application/templates/users.html
@@ -10,7 +10,7 @@
     </form>
 </div>
 
-<div><a href="/new_user">Add user</a></div>
+<div><a href="/edit_user/">Add user</a></div>
 
 <div>
     <p>Users:</p>
@@ -25,7 +25,7 @@
                     <td> Roles </td>
                     <td> Department </td>
                     <td> Position </td>
-                    <td> Login </td>
+                    <td></td>
                 </tr>
             </thead>
         {% endif %}
@@ -38,7 +38,7 @@
                 <td>{{user.roles}}</td>
                 <td>{{user.dept.name}}</td>
                 <td>{{user.position}}</td>
-                <td>{{user.login}}</td>
+                <td><a href="/edit_user/{{user.key}}">edit</a></td>
             </tr>
         {% endfor %}
     </table>
