--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -98,5 +98,5 @@
         <input type="button" {{period.register}} name="register" value="register">
         <hr >
     {% endfor %}
-        <p id="new_period" ><a href="#/new_period">Create New PR Period</a></p>
+        <p id="new_period" ><a href="#/hr/new_period">Create New PR Period</a></p>
 {% endblock %}
