--- a/application/templates/api.hr.html
+++ b/application/templates/api.hr.html
@@ -24,7 +24,8 @@
                     'finish': finish},
                         function(data){
                             if (data == 'ok'){
-                                $('#hint').html('New period created');
+                                message = "You've created new period";
+                                window.location.href = "/#/hr";
                             }
                         })
             }
@@ -71,7 +72,6 @@
             {% endfor %}
             </div>
         </div>
-        <!--</div>-->
     {% endfor %}
 <input type='button' id='submit' value="create PR">
 
