--- a/application/templates/_api_base.html
+++ b/application/templates/_api_base.html
@@ -2,6 +2,10 @@
 {% block script %}
 {% endblock %}
 
+<div id="breadcrumps">
+    {% block breadcrumps %}
+    {% endblock %}
+</div>
 <!-- Content -->
 {% block content %}
 {% endblock %}
