--- a/application/templates/api.hr.html
+++ b/application/templates/api.hr.html
@@ -40,7 +40,9 @@
     })
 </script>
 {% endblock %}
-
+{% block breadcrumps %}
+<a href="/#/hr">hr</a>/<a>new period</a>/
+{% endblock %}
 {% block content %}
     <h1>Create New Performance Review Period:</h1>
     <div>
