--- a/application/templates/api.manager.html
+++ b/application/templates/api.manager.html
@@ -1,5 +1,8 @@
 {% extends "_api_base.html" %}
 
+{% block breadcrumps %}
+<a>/manager/</a>
+{% endblock %}
 {% block content %}
 
 {% if not periods %}
