--- a/application/templates/api.readonly_eaf.html
+++ b/application/templates/api.readonly_eaf.html
@@ -18,7 +18,9 @@
 }
 </script>
 {% endblock %}
-
+{% block breadcrumps %}
+<a href="employee">employee</a>/<a>self form</a>/
+{% endblock %}
 {% block content %}
 <div id="info">
 <p>Performance Review Form for {{form.pr.employee.first_name}} {{form.pr.employee.last_name}}</p>
