--- a/application/templates/settings.html
+++ b/application/templates/settings.html
@@ -8,7 +8,9 @@
 
 </script>
 {% endblock %}
-
+{% block breadcrumps %}
+<a href="/#/hr">hr</a>/<a>settings</a>/
+{% endblock %}
 {% block content %}
         <div id="events">
         <a href="#" onclick="display(this); return false">Automatic creation PR events:</a>
