--- a/application/static/main.css
+++ b/application/static/main.css
@@ -56,3 +56,7 @@ div { margin: 20px; }
     height: 30px;
     border:  1px solid #cccccc;
 }
+#breadcrumps{
+    width: 100%;
+    margin: auto;
+}
