--- a/application/templates/api.hr_maf.html
+++ b/application/templates/api.hr_maf.html
@@ -1,5 +1,7 @@
 {% extends "api.readonly_maf.html" %}
-
+{% block breadcrumps %}
+<a href="/#/hr">hr</a>/<a>{{form.pr.employee.first_name}}&nbsp;{{form.pr.employee.last_name}}&nbsp;form</a>/
+{% endblock %}
 {% block hr-comment %}
     <div id='hr_comment' class="input_div">
     <p>Comment:</p>
