--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -44,7 +44,9 @@
     })
 </script>
 {% endblock %}
-
+{% block breadcrumps %}
+<a>hr</a>/
+{% endblock %}
 {% block content %}
 
     {% for period in periods %}
