--- a/application/templates/summary_report.html
+++ b/application/templates/summary_report.html
@@ -1,5 +1,7 @@
 {% extends "_api_base.html" %}
-
+{% block breadcrumps %}
+<a href="/#/hr">hr</a>/<a>summary report</a>/
+{% endblock %}
 {% block content %}
 
 
