--- a/application/templates/_base.html
+++ b/application/templates/_base.html
@@ -6,6 +6,7 @@
     <script type="text/javascript" src="/static/site.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/main.css">
     <script type="text/javascript" src="/static/nav.js"></script>
+    <script type="text/javascript" src="/static/set_form_status.js"></script>
     <script type="text/javascript" src="/static/js/jquery-1.6.2.min.js"></script>
     <script type="text/javascript" src="/static/js/jquery-ui-1.8.16.custom.min.js"></script>
     <link type="text/css" href="/static/css/ui-lightness/jquery-ui-1.8.16.custom.css" rel="Stylesheet" />
